[package]
name = "backblaze-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.12.0"
reqwest = { version = "0.11.10", features = ["json", "stream"] }
futures-core = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.24.1", features = ["full"] }
tokio-util = {version = "0.7.3", features = ["codec"] }
bytes = "1.1.0"