[package]
name = "retain-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = {version = "0.7.4", features = ["codec"] }
futures-core = "0.3.21"
futures-util = "0.3.21"
clap = { version = "3.2.25", features = ["yaml"] }
backblaze-api = { path = "../backblaze-api" }
serde = "1.0.137"
serde_json = "1.0.81"
dirs = "5.0.1"
base64 = "0.21.0"
glob = "0.3.0"
sha1 = "0.10.1"
bytes = "1.1.0"
pin-project = "1.0.11"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
filetime = "0.2.17"
strmap = "1.0.0"
